          build time.
      - Package:
        'new': reduced 10-15% of time spent.
      - BinaryVersion:
        - 'new': fixed reading installed size in bytes.
        - 'new': use internal offsets for working with fields, reduces time
          spent by 20-30%.
    - Download:
      - Manager:
        - Added internal check for undefined results from post-action
          subroutines.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Tue, 22 Sep 2009 19:12:54 +0300

cupt (1.0.0~beta1) unstable; urgency=low

  * cupt:
    - Fixed the regression since 0.6.0 when reasons are selected to display
      and some reason is an unsatisfied pre-dependency. Thanks to
      Michael Stapelberg.
  * Cupt
    - Cache:
      - Require List::MoreUtils >= 0.23 directly in code too. Thanks to
        Michael Stapelberg for the suggestion.
    - System:
      - Worker:
        - Sort downloads alphabetically.
        - 'update_release_and_index_data': flip the return result to match the
          documentation.
        - 'update_release_and_index_data': honor
          'apt::update::post-invoke-success' option.
        - 'update_release_and_index_data': don't try to check signatures in
          simulate mode.
      - Worker:
        - 'change_system': produce more debug info when calling dpkg.
        - While splitting heterogeneous actions, set '--force-conflicts' dpkg
          option for unpack/install commands with more than one package as
          an argument even for safe-as-a-whole operations.
    - Config:
      - Added configuration variable 'apt::update::post-invoke-success'.
  * doc:
    - cupt_howto:
      - Added a paragraph with debug options to use when reporting problems.
  * debian/rules:
    - Fixed building with Perl 5.10.1.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Mon, 21 Sep 2009 15:12:50 +0300

cupt (0.6.5) unstable; urgency=low

  * cupt:
    - 'dist-upgrade': fixed the regression since 0.6.4 being not able to