@@ -43,6 +43,12 @@ cupt (1.0.0~beta2) UNRELEASED; urgency=low
       - Manager:
         - Added internal check for undefined results from post-action
           subroutines.
+    - System:
+      - Worker:
+        - 'update_release_and_index_data': fixed race condition when
+          'cupt::update::keep-bad-signatures' is set to false, some release
+          signature failed gpg check, and more than one index file is attached
+          to corresponding Release.
 
  -- Eugene V. Lyubimkin <jackyf@debian.org>  Tue, 22 Sep 2009 19:12:54 +0300
 
